--- a/FluttterRouterDemo_android/app/src/main/res/layout/layout2.xml
+++ b/FluttterRouterDemo_android/app/src/main/res/layout/layout2.xml
@@ -16,12 +16,16 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:text="click"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:gravity="center"
-        tools:src="@drawable/ic_launcher_foreground"
+        android:onClick="click"
+        android:src="@android:mipmap/sym_def_app_icon"
+        tools:src="@tools:sample/us_phones"
         android:contentDescription="@string/btn" />
+
 </RelativeLayout>
